export const snapshot = {};

snapshot[`shouldCreateChangelog 1`] = `
[
  {
    action: "create",
    md: "# deno_changesets

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](http://keepachangelog.com/) and this
project adheres to [Semantic Versioning](http://semver.org/).

## 0.0.2 - 2000-01-01

### Deprecated

- Deprecated an API, sorry!
",
    path: "/src/__mocks__/changeset_patch/CHANGELOG.md",
  },
]
`;

snapshot[`shouldUpdateChangelog 1`] = `
[
  {
    action: "update",
    md: "# deno_changesets

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](http://keepachangelog.com/) and this
project adheres to [Semantic Versioning](http://semver.org/).

## 1.0.0 - 2000-10-01

### Added

- Added a new API, yay!

### Removed

- Removed an API, sorry!

### Fixed

- Fixed a bug, woo!

## 0.0.2 - 2000-01-01

### Deprecated

- Deprecated the deprecation, sorry!
",
    path: "/src/__mocks__/changeset_major/CHANGELOG.md",
  },
]
`;
